# ansible-collection-homelab

./: .ansible-lint  .gitignore  CHANGELOG.rst  CONTRIBUTING.md  Makefile  README.md  galaxy.yml  pyproject.toml  requirements.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: release.yaml  tests.yaml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 3-code-server.yaml
meta/: runtime.yml
plugins/lookup/: password_hash.py
roles/canonical_ads/: README.md
roles/canonical_ads/defaults/: main.yml
roles/canonical_ads/handlers/: main.yml
roles/canonical_ads/meta/: main.yaml  main.yml
roles/canonical_ads/tasks/: main.yaml  main.yml
roles/canonical_ads/vars/: main.yml
roles/code_server/: README.md
roles/code_server/defaults/: main.yml
roles/code_server/files/: code-server-config.yaml.j2  passgen.py
roles/code_server/handlers/: main.yml
roles/code_server/meta/: main.yml
roles/code_server/tasks/: main.yml
roles/code_server/vars/: main.yml
tests/molecule/role_canonical_ads/: converge.yml  molecule.yml  prepare.yml
tests/molecule/role_code_server/: converge.yml  molecule.yml
tests/molecule/role_code_server_with_pass/: converge.yml  molecule.yml  verify.yml
