[tool.poetry]
name = "homelab"
version = "0.1.0"
description = ""
authors = ["Artis3n <dev@artis3nal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^7.3.0"


[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^6.12.2", markers = "platform_system != 'Windows'" }
molecule = {extras = ["docker"], version = "^4.0.4"}
pytest = "^7.2.1"
pre-commit = "^3.0.4"
antsibull-changelog = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
