[tool.poetry]
name = "homelab"
version = "1.2.0"
description = ""
authors = ["Artis3n <dev@artis3nal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^8.1.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^6.14.4", markers = "platform_system != 'Windows'" }
molecule = "^6.0.2"
molecule-plugins = {extras = ["docker"], version = "^23.4.1"}
pytest = "^7.2.1"
pre-commit = "^3.2.1"
antsibull-changelog = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
